# CRM

./: .env  .gitignore  web-configuration.md
backend/: API.md  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
backend/certbot/conf/accounts/acme-staging-v02.api.letsencrypt.org/directory/2795a9924102082c5689b934d018444c/: meta.json  private_key.json  regr.json
backend/nginx-proxy/: Dockerfile  default.conf  local_default.conf  real_default.conf
backend/src/: database.rs  hashing.rs  main.rs
backend/src/controllers/: crm.rs  database.rs  hashing.rs  jwt.rs  mod.rs
backend/src/extractors/: admin_authentication.rs  authentication.rs  mod.rs
backend/src/middleware/: admin_middleware.rs  auth_middleware.rs  mod.rs  owns_or_admin_middleware.rs  owns_or_admin_or_can_access_crm_can_handle_customers_employees_vehicles.rs  owns_or_admin_or_can_handle_customers.rs  owns_or_admin_or_can_handle_employees.rs  owns_or_admin_or_can_handle_vehicles.rs  owns_or_admin_or_can_report_time.rs  user_middleware.rs
backend/src/models/: _break.rs  client.rs  company.rs  contract.rs  crm.rs  customer.rs  deal.rs  employee.rs  entry.rs  meeting.rs  mod.rs  task.rs  time_report.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  client.rs  clients.rs  companies.rs  crm.rs  customers.rs  employees.rs  entries.rs  meetings.rs  mod.rs  tasks.rs  test.rs  time_reports.rs  users.rs
booking/: README.md  package-lock.json  package.json
crm/: .env
employee/: package-lock.json
frontend/: package-lock.json  package.json  tailwind.config.ts
landing-page/: package-lock.json  (+1 more)
(+238 files in other folders)
