[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "uuid", "chrono" ] } 
dotenvy = "0.15.7"
uuid = {version = "1.6.1", features = ["v4", "serde"]}
serde = { version = "1.0", features = ["derive"] }  
chrono = "0.4.31"
jsonwebtoken = "9.2.0"