[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "uuid", "chrono", "tls-native-tls"] } 
dotenvy = "0.15.7"
uuid = {version = "1.6.1", features = ["v4", "serde"]}
serde = { version = "1.0", features = ["derive"] }  
chrono = { version = "0.4.31", features = ["serde"]}
jsonwebtoken = "9.2.0"
sha2 = "0.10.8"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
futures-util = "0.3.30"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.1"
actix-http = "3.5.1"